edit with images

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
      </style>
 
     <title>Biotech Project</title>
-    <link rel="stylesheet" type="text/css" href="AboutRandyll.css">
+    <link rel="stylesheet" type="text/css" href="biosite.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -32,7 +32,7 @@
         <div class="aboutRandi">
             <div class="aboutRandi-title">
                 <h3>A little about Randi</h3>
-                <img src="IMG_1895.jpeg" alt="Couch Randi">
+                <img src="Images/IMG_1895.jpeg" alt="Couch Randi">
             </div>
        
         <br/>
