--- a/hobbies.html
+++ b/hobbies.html
@@ -78,7 +78,7 @@
             <hr>
             
                 <h3>Taye Diggs and Missy Elliott</h3>
-                <img src ="images/20191009_210741.jpg" alt ="Our Puppies" class="center">
+                <img src ="Images/20191009_210741.jpg" alt ="Our Puppies" class="center">
                 <p style="text-align:center">
                     The male pup on the left is named Taye Diggs who is a 3 year old cattle dog-lab mix.
                     The female pup on the right is named Missy Elliott who is a 2 year old cattle dog-chihuahua mix. 
