--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                     <th>Future Goals</th>
                 </tr>
                 <tr>
-                    <td><img src="Creightonalum.jpg" alt="Creighton"></td>
-                    <td><img src="UNOAA.png" alt="UNO"></td>
-                    <td><img src="Professor.jpg" alt="Becoming a professor"></td>
+                    <td><img src="Images/Creightonalum.jpg" alt="Creighton"></td>
+                    <td><img src="Images/UNOAA.png" alt="UNO"></td>
+                    <td><img src="Images/Professor.jpg" alt="Becoming a professor"></td>
                 </tr>
                 <tr>
                     <td>In 2010 Randi graduated High School and began attending school at Creighton University.
