--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
 
      </style>
 
-    <title>Biotech Project</title>
-    <link rel="stylesheet" type="text/css" href="biosite.css">
+    <title>Biosite Project</title>
+    <link rel="stylesheet" type="text/css" href="bioSite.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
