--- a/hobbies.html
+++ b/hobbies.html
@@ -91,7 +91,7 @@
     
     <div class="buttons">
     <p> <a href="about.html" id="back-to-about">About Page</a> </p> 
-    <p> <a href="landing.html" id="back-to-landing">Landing Page</a> </p>
+    <p> <a href="index.html" id="back-to-landing">Landing Page</a> </p>
     <p> <a href="hobbies.html" id="back-to-hobbies">Hobbies Page</a> </p>
 </div>
     
