--- a/hobbies.html
+++ b/hobbies.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <title>Biosite Project</title>
-    <link rel="stylesheet" type="text/css" href="biosite.css">
+    <link rel="stylesheet" type="text/css" href="bioSite.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
